# capgemini-capstone

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  DEPLOY.md  README.md  cloudbuild.backend.yaml  cloudbuild.frontend.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/api/: chat.py
backend/app/graph/: builder.py  traversal.py
backend/app/ingestion/: extract.py  generate_docs.py  upload_gcs.py
backend/app/retrieval/: embeddings.py  graphrag.py  vector_search.py
backend/scripts/: 01_generate.py  02_upload.py  03_extract.py  04_build_graph.py  05_embed.py  05b_index_only.py  06_teardown.py
data/: chunks.json  embeddings.json  entities.json  extractions.json  graph.pkl  relationships.json  vector_search_ids.json
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/chat/: ChatInterface.tsx  Citations.tsx  GraphPreview.tsx  Message.tsx
